[project]
name = "tg-claude-bot"
version = "0.1.0"
description = "Single-file Telegram bridge to the Claude Code CLI: sessions, voice, inline buttons, live status"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.61",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
]
